src/platform/forms/sass/_m-schemaform.scss
// Style for schemaform
@import "~@department-of-veterans-affairs/css-library/dist/stylesheets/mixins";
.va-growable-background {
  padding: 1em;
  margin-bottom: 1em;
  background-color: var(--vads-color-base-lightest);
}

.progress-box .va-growable button {
  width: auto;
  margin-right: 0;
  @media screen and (max-width: 340px) {
    padding-left: 10px;
    padding-right: 10px;
  }
}

.float-right {
  float: right;
}

.float-left {
  float: left;
}

legend {
  color: var(--vads-color-base-darker);
  font-size: 1.35em;
  font-weight: 700;
  line-height: 1.5;
  margin: 0;
  padding: 0 0 0.5em 0;
}

// IE
fieldset {
  display: inline-block;
  width: 100%;
  max-width: 750px;
  .form-review-panel & {
    width: 100%;
  }
}

@media (max-width: 40.063em) {
  .progress-box {
    border: none;
    padding: 0;
  }
}

// Overriding a way too broad style in the base va sass
.form-review-panel {
  ul li p {
    margin-top: 16px;
    margin-bottom: 16px;
  }
}

.va-nav-breadcrumbs-list,
legend,
.nav-header > h4,
.nav-header > h2,
.nav-header,
.usa-input-error,
.input-error-date,
.usa-alert {
  &:focus {
    outline: none;
  }
}

.form-error-date .input-date-label {
  font-weight: bold;
  font-size: 1.0625rem;
  font-weight: 700;
}

dl.review {
  .review-row {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    border-top: 1px solid var(--vads-color-base-light);
    padding: 0.9375rem;
    padding-left: 0;
    column-gap: 0.9375rem;
    > dd {
      font-weight: bold;
      @media (min-width: $xsmall-screen) {
        text-align: right;
      }
    }
    > dt > p {
      margin-top: 0;
      margin-bottom: 0;
    }
    @media (min-width: $xsmall-screen) {
      flex-direction: row;
    }
  }
  border-bottom: 1px solid var(--vads-color-base-light);
}
// MBMS-51921 remove this and update dl.review when the prod flag removal story is ready
dl.review-auto-margin {
  margin: 16px auto;
  .review-row {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    border-top: 1px solid var(--vads-color-base-light);
    padding: 0.9375rem;
    padding-left: 0;
    > dd {
      font-weight: bold;
      text-align: right;
    }
    > dt > p {
      margin-top: 0;
      margin-bottom: 0;
    }
    @media (min-width: $small-screen) {
      flex-direction: row;
      > dd {
        padding-left: 5px;
        min-width: 100px;
      }
      > dt {
        max-width: 60%;
        min-width: 40%;
      }
    }
  }
  border-bottom: 1px solid var(--vads-color-base-light);
}

form.rjsf {
  max-width: 100%;
}

.va-growable-review {
  margin-top: 16px;
}

// Even up the spacing between multi-line labels and their respective elements
label {
  + div {
    // Space above the date fields
    .form-datefield-month, .form-datefield-day, .usa-form-group-year,
    // And the inputs uswds sets a top margin for
    input:not([type="radio"]),
    input[type="text"], input[type="email"],
    input[type="password"], input[type="url"],
    input[type="tel"], input[type="number"],
    input[type="search"], input[type="file"],
    input[type="date"], input[type="datetime-local"],
    input[type="month"], input[type="time"],
    input[type="week"], textarea, select {
      margin-top: 0.5em;
    }
  }
}

.usa-alert ul:first-child {
  margin-top: 0;
}

.schemaform-buttons {
  [type="submit"] {
    margin-top: 0.5em;
    margin-right: 0.5em;
  }
}

.schemaform-back-buttons {
  margin-bottom: 4.375rem !important;
}

.schemaform-block {
  margin-top: 2em;
}

.progress-box-schemaform {
  margin-top: 0;
  padding-top: 0;
  border: none;
}

.schemaform-chapter-progress {
  padding-right: 1.25rem;
  margin-bottom: 1.5em;
  @media (max-width: 40.063em) {
    padding-left: 1.25rem - 0.5859375rem;
    padding-right: 1.25rem - 0.5859375rem;
  }
  > h4 {
    padding-bottom: 0 !important;
  }
}

.schemaform-title {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  > h1 {
    margin-bottom: 0;
    padding-right: 10px;
  }
  > .schemaform-subtitle {
    font-size: 1.25rem;
  }
  margin-bottom: 1.85rem;
}

.schemaform-required-span {
  color: var(--vads-color-secondary-dark);
  margin: 0 0.35em;
}

.schemaform-intro {
  padding-bottom: 0.625rem;
  margin-bottom: 4.375rem;
}

// Align the process ol with the title
.schemaform-process {
  ol {
    margin-left: -0.5em;
  }
}

.schemaform-array-row-title:focus {
  @include focus-gold-light-outline;
  display: inline-block;
}

.schemaform-array-row {
  outline: none;
}

.schemaform-block-header {
  margin-bottom: 0.7em;
  > legend,
  > h5,
  > p {
    padding-bottom: 0 !important;
    margin-bottom: 0 !important;
  }
  > p {
    margin-top: 0;
  }
  > .schemaform-block-title + p {
    margin-top: 0.5em;
  }
}
.schemaform-block-title {
  font-family: $font-serif;
  font-size: 1.125rem;
}
.schemaform-block-subtitle {
  font-size: 0.9375rem;
  font-weight: 700;
}

.schemaform-first-field {
  .schemaform-label,
  > .usa-input-error {
    margin-top: 0;
  }
}

legend.schemaform-label {
  font-weight: inherit;
  font-size: inherit;
  color: inherit;
  line-height: inherit;
  max-width: 28.75rem;
  padding-bottom: 0;
}

fieldset.schemaform-field-template {
  margin-top: 1.875rem;
  &.schemaform-first-field {
    margin-top: 0;
  }
}

.schemaform-warning-header {
  margin-top: 9px;
}

.schemaform-failure-alert {
  margin-bottom: 1.5em;
}

.schemaform-radio-indent {
  margin-left: 27px;
}

.schemaform-expandUnder-indent {
  margin-left: 29px;
}

.schemaform-currency-input .schemaform-widget-wrapper {
  position: relative;
  &:before {
    content: "$";
    display: block;
    position: absolute;
    top: 9px;
    left: 10px;
  }
  > input {
    padding-left: 25px !important;
  }
}

//duplicated from claims-status.scss
.help-talk {
  margin: 0.5em 0;
  padding: 0;
}

.help-phone-number {
  margin: 0.5em 0 2em;
}

.help-phone-number-link {
  font-weight: bold;
  text-decoration: none;
  margin: 0.5em 0;
  white-space: nowrap;
}
/* ... */

